# agentic_ta

./: .env.example  .gitattributes  .gitignore  CodeFormatter.md  INGESTION_LLM.md  README.md  pyproject.toml
.github/: pull_request_template.md
Wonbum/: seed_data_implementation_plan.md
app/: deps.py  main.py
app/llm/: __init__.py  ollama_client.py
app/routers/: feedback.py
app/schemas/: __init__.py  feedback.py
app/services/: __init__.py  draft_saver.py  feedback_packet.py  feedback_service.py
app/storage/: __init__.py  local_store.py
db/: migration_submission_version_refactor.sql  postgresql_demo_setup.md  schema.sql  version_refactor_change_log.md
db/migrations/: add_draft_status.sql  add_instructor_roles.sql
docs/: SRS.md  api_contract_sprint3.md  integration_architecture.md  integration_guide_sprint3.md
make_simul_data/: generate_data.py
make_simul_data/seed_data/: assignments.py  code_generator.py  config.py  grading_engine.py  manifest.py  models.py  plagiarism.py  report_generator.py  students.py  submission_builder.py  validator.py
make_simul_data/tests/: test_assignments.py  test_code_generator.py  test_grading_engine.py  test_manifest_validator.py  (+4 more)
mockups/: analytics_dashboard.html  approval_workflow.html  batch_grading.html  icollege_integration.html  rubric_configuration.html
scripts/: demo_e2e.py  generate_feedback_draft.py  ingest_seed_data.py  verify_storage.py
tests/: test_deps.py  test_draft_saver.py  test_e2e_integration.py  test_feedback_packet.py  test_feedback_router.py  test_feedback_service.py  test_ingestion.py  test_llm_client.py  test_local_store.py  test_schemas.py
(+1824 files in other folders)
