[project]
name = "agentic-ta"
version = "0.1.0"
description = "AI-Powered Grading Assistant for iCollege"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.10.0",
    "ruff>=0.8.0",
    "pre-commit>=4.0.0",
    "pytest>=8.0.0",
]
seed = [
    "faker>=33.0.0",
    "pandas>=2.2.0",
    "reportlab>=4.2.0",
    "Pillow>=11.0.0",
    "rapidfuzz>=3.10.0",
    "jsonschema>=4.23.0",
]

[tool.setuptools.packages.find]
include = ["agentic_ta*", "make_simul_data*"]

[tool.black]
line-length = 88
target-version = ["py311"]
force-exclude = "make_simul_data/make_simul_data/output"

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = ["make_simul_data/make_simul_data/output"]
force-exclude = true

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
# E = pycodestyle errors
# F = pyflakes (logic errors)
# I = isort (import sorting)
# W = pycodestyle warnings

[tool.ruff.lint.isort]
known-first-party = ["agentic_ta", "make_simul_data"]

[tool.pytest.ini_options]
testpaths = ["make_simul_data/tests", "tests"]
markers = [
    "integration: End-to-end integration tests (may require longer runtime)",
]
filterwarnings = [
    # TestCaseSpec is a frozen dataclass (not a pytest test class) whose name
    # starts with "Test", triggering a harmless collection warning.
    "ignore::pytest.PytestCollectionWarning",
]
